--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -7,8 +7,10 @@
     */
     
     var disqus_config = function () {
-    /* this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable */
-    this.page.identifier = document.getElementById("disqus_thread").getAttribute('data-id'); // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        var dataid = document.getElementById("disqus_thread").getAttribute('data-id');
+        // this.page.url = "http://yitzhakstone.github.io" + dataid; // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = dataid; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        alert(this.page.url);
     };
     
     (function() { // DON'T EDIT BELOW THIS LINE
