--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,18 @@ layout: default
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">        
+      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+        {% assign dy = page.date | date: "%a" %}
+        {% case dy %}
+          {% when "Sun" %}Domingo
+          {% when "Mon" %}Segunda-feira
+          {% when "Tue" %}Terça-feira
+          {% when "Wed" %}Quarta-feira
+          {% when "Thu" %}Quinta-feira
+          {% when "Sex" %}Sexta-feira
+          {% when "Sat" %}Sábado
+        {% endcase %}, 
+        {{ page.date | date: "%d}} de 
         {% assign m = page.date | date: "%-m" %}
         {% case m %}
           {% when '1' %}Janeiro
@@ -21,8 +32,8 @@ layout: default
           {% when '10' %}Outubro
           {% when '11' %}Novembro
           {% when '12' %}Dezembro
-        {% endcase %}        
-        {{ page.date | date: "%d de %m (%B) de %Y" }}
+        {% endcase %}, 
+        {{ page.date | date: "%Y" }}
       </time>
       {% if page.author %} • 
       <span itemprop="author" itemscope itemtype="http://schema.org/Person">
