--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,6 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {% if page.language == "br" %}
@@ -46,10 +45,23 @@ layout: default
       </span>
       {% endif %}
     </p>
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="post-meta">
+      {% for category in page.categories %}
+        {{ category }}{% if forloop.last == false %},{% endif %}
+      {% endfor %}
+    </p>
   </header>
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+
+  <span class="post-meta post-meta-tags">
+    Tags:
+    {% for tag in page.tags %}
+      {{ tag }}{% if forloop.last == false %},{% endif %}
+    {% endfor %}
+  </span>
 
 </article>
