--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,6 +61,8 @@ layout: default
     Tags:
     {% for tag in page.tags %}
       {{ tag }}{% if forloop.last == false %},{% endif %}
+  	{% else %}
+			---
     {% endfor %}
   </span>
 
