--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,8 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$background-color-alt: #1f1f1f;
+
 // Width of the content area
 $content-width:    800px;
 
