--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,11 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$grey-color-fd: #fdfdfd;
+$grey-color-f9: #f9f9f9;
+$grey-color-b: #bbb;
+$grey-color-a: #aaa;
+
 $background-color-alt: #1f1f1f;
 
 // Width of the content area
