--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,6 @@
-<div class="wrapper disqus-thread">
+<div class="wrapper disqus-thread-wrapper">
 
-    <div id="disqus_thread" class="disqus-thread2"></div>
+    <div id="disqus_thread"></div>
 
     <script>
         /**
