--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,15 @@
     {% include header.html %}
 
     <div class="page-content">
+      
       <div class="wrapper">
         {{ content }}
       </div>
+      
+      {% if page.id %}
+        {% include disqus.html %}
+      {% endif %}
+
     </div>
 
     {% include footer.html %}
