--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,6 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
 
@@ -23,6 +22,12 @@
           {% if site.twitter_username %}
           <li>
             {% include icon-twitter.html username=site.twitter_username %}
+          </li>
+          {% endif %}
+          
+          {% if site.medium_username %}
+          <li>
+            {% include icon-medium.html username=site.medium_username %}
           </li>
           {% endif %}
         </ul>
