--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
           
           {% if site.medium_username %}
           <li>
-            {% include icon-medium.html username=site.medium_username %}
+            <a href="https://medium.com/{{ site.medium_username }}"><span class="username">Medium</span></a>
           </li>
           {% endif %}
         </ul>
