--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
           {% endif %}
           
           {% if site.medium_username %}
-          <li>
+          <li style="padding-left: 1.5em;">
             <a href="https://medium.com/{{ site.medium_username }}"><span class="username">Medium</span></a>
           </li>
           {% endif %}
